# OpenFlatland

./: .gitignore  .gitmodules  .hgignore  .travis.yml  CMakeLists.txt  OpenFlatland.cbp  OpenFlatlandProject.cppcheck  README.md  UpdateGitInfo.bat  UpdateMercurialInfo.bat  bitbucket-pipelines.yml  lifeSimulator.cbp  lifeSimulator.depend  lifeSimulator.layout  main.cpp  mercurialinfo.tmpl
doc/: entity.uml
examples/: OpenFlatland_cfg.xml
include/: ann_viewer_widget.hpp  annviewerwidget.hpp  application.hpp  artificial_neuron_engine.hpp  colorize_circle_shape.hpp  colorize_number.hpp  colorize_ray_data.hpp  colorizecircleshape.hpp  colorizerealnbr.hpp  console_widget.hpp  consolewidget.hpp  const_element.hpp  const_element_line.hpp  const_elements_factory.hpp  constelement.hpp  constelementline.cpp  constelementline.hpp  constelementsfactory.hpp  copy_range_functor.hpp  drawable_entity_energy.hpp  drawable_entity_motion.hpp  drawable_entity_vision.hpp  drawable_object.hpp  drawable_spiking_neural_network.hpp  entity.h  entity.hpp  entity_energy.hpp  entity_factory.hpp  entity_ghost.hpp  entity_motion.hpp  entity_shell.hpp  entity_vision.hpp  entity_vision_node.hpp  entity_vision_viewer_widget.hpp  entityfactory.h  entityfactory.hpp  entityghost.h  entityghost.hpp  entityshell.h  entityshell.hpp  (+37 more)
libraries/: github.txt
libraries/CTPL-master/: ctpl_stl.h
libraries/SFML-master/: CMakeLists.txt
libraries/codeframe-master/: CMakeLists.txt  Doxyfile  LICENSE  README.md  readme.md
libraries/codeframe-master/examples/qtexample/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  objectchild.cpp  objectchild.h  objectcontainer.cpp  objectcontainer.h  qtexample.pro
libraries/codeframe-master/include/: CMakeLists.txt  base64.hpp  communicationinterface.h  cxml.h  cxml.hpp  cxmlnode.h  cxmlnode.hpp  extendedtype2dpoint.hpp  extendedtypeinterface.hpp  extendedtypepoint2d.hpp  extfundamental.hpp  extpoint2d.hpp  extthrust.hpp  extvector.hpp  instance_manager.hpp  instancemanager.h  instancemanager.hpp  miocanprotocol.h  mjpegVideoCapture.h  propertyignorelist.hpp  qtserializableutilities.h  reference_manager.hpp  referencemanager.hpp  rs485protocol.h  serializable.h  serializable.hpp  serializable_identity.hpp  serializable_lua.hpp  serializable_object.hpp  serializable_object_container.hpp  serializable_object_dummy.hpp  serializable_object_list.hpp  serializable_object_multiple_selection.hpp  serializable_object_node.hpp  serializable_object_selection.hpp  serializable_path.hpp  serializable_property.hpp  serializable_property_base.hpp  serializable_property_info.hpp  serializable_property_iterator.hpp  (+39 more)
libraries/codeframe-master/include/qtwidgets/: QProperty.h  QPropertyEditorWidget.h  QPropertyModel.h  qtwidgetsfactory.h
libraries/codeframe-master/include/utilities/: CMakeLists.txt  DataTypesUtilities.h  FileUtilities.h  FilepathUtilities.h  HashUtilities.h  LoggerUtilities.h  MathUtilities.cpp  MathUtilities.h  PerformanceUtilities.h  SysUtilities.h  TextUtilities.h  ThreadUtilities.h  crc.h
libraries/codeframe-master/src/: CMakeLists.txt  base64.cpp  cxml.cpp  cxmlnode.cpp  extendedtypepoint2d.cpp  extpoint2d.cpp  extthrust.cpp  extvector.cpp  instance_manager.cpp  instancemanager.cpp  miocanprotocol.cpp  mjpegVideoCapture.cpp  reference_manager.cpp  referencemanager.cpp  rs485protocol.cpp  serializable.cpp  serializable_identity.cpp  serializable_lua.cpp  serializable_object.cpp  serializable_object_container.cpp  serializable_object_list.cpp  serializable_object_multiple_selection.cpp  serializable_object_node.cpp  serializable_object_selection.cpp  serializable_path.cpp  serializable_property.cpp  serializable_property_base.cpp  serializable_property_info.cpp  serializable_property_iterator.cpp  serializable_property_list.cpp  serializable_property_multiple_selection.cpp  serializable_property_selection.cpp  serializable_register.cpp  serializable_selectable.cpp  serializable_storage.cpp  serializablechildlist.cpp  serializablecontainer.cpp  serializableidentity.cpp  serializableinterface.cpp  serializablelua.cpp  (+15 more)
libraries/codeframe-master/src/qtwidgets/: ColorCombo.cpp  QProperty.cpp  QPropertyEditorWidget.cpp  QPropertyModel.cpp  QVariantDelegate.cpp  qtwidgetsfactory.cpp
libraries/codeframe-master/src/utilities/: CMakeLists.txt  FileUtilities.cpp  LoggerUtilities.cpp  MathUtilities.cpp  PerformanceUtilities.cpp  SysUtilities.cpp  ThreadUtilities.cpp  utilities.cpp
libraries/codeframe-master/tests/: CMakeLists.txt  test_serializable.cpp  test_serializable_container.cpp  test_serializable_create.cpp  test_serializable_fixture.hpp  test_serializable_path.cpp  test_serializable_storage.cpp  test_serializable_utilities.cpp  test_serializablelibmain.cpp
libraries/imgui-sfml-master/: imgui-SFML.cpp
libraries/libjpeg-turbo-1.2.1/: CMakeLists.txt
libraries/libsigc++-2.99.10/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  sigc++config.h.in
libraries/libsigc++-2.99.10/MSVC_Net2017/: sigc++config.h  sigc.rc
libraries/libsigc++-2.99.10/cmake/: Makefile.in
libraries/libsigc++-2.99.10/docs/: Makefile.in
libraries/libsigc++-2.99.10/examples/: Makefile.in
src/: ann_viewer_widget.cpp  annviewerwidget.cpp  application.cpp  artificial_neuron_engine.cpp  colorize_circle_shape.cpp  colorize_ray_data.cpp  colorizecircleshape.cpp  colorizerealnbr.cpp  console_widget.cpp  consolewidget.cpp  const_element.cpp  const_element_line.cpp  const_elements_factory.cpp  constelement.cpp  constelementline.cpp  constelementsfactory.cpp  drawable_entity_energy.cpp  drawable_entity_motion.cpp  drawable_entity_vision.cpp  drawable_object.cpp  drawable_spiking_neural_network.cpp  entity.cpp  entity_energy.cpp  entity_factory.cpp  entity_ghost.cpp  entity_motion.cpp  entity_shell.cpp  entity_vision.cpp  entity_vision_node.cpp  entity_vision_viewer_widget.cpp  entityfactory.cpp  entityghost.cpp  entityshell.cpp  entityvision.cpp  font_factory.cpp  fontfactory.cpp  gui_widgets_layer.cpp  guiwidgetslayer.cpp  information_widget.cpp  informationwidget.cpp  (+18 more)
(+136 files in other folders)
